// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_html_project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Error: authorization expired!",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deploy 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_html_project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should deploy with custom config 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_custom_config_project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should deploy with endpoint flag 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_html_project to endpoint:",
    "http://localhost:3000",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should deploy without auth but with token 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "
Deploying using given token..",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should deploy without path 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should display error log 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Error deploying project:",
    "Build failed! See build log for details.",
  ],
  Array [
    "Build log:
",
  ],
  Array [
    "Error log",
  ],
  Array [
    "here",
  ],
]
`;

exports[`Should display error on malformed JSON 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Error deploying project:",
    "Bad Gateway",
  ],
  Array [
    "Build log:
",
  ],
  Array [
    "No log available",
  ],
]
`;

exports[`Should display error on zero deployments 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Error deploying project:",
    "Error: Something went wrong!",
  ],
  Array [
    "Build log:
",
  ],
  Array [
    "No log available",
  ],
]
`;

exports[`Should display verbose output 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_ignore_project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "
Ignoring following paths:",
    Array [
      "yarn.lock",
      "ignore.me",
      ".exoframeignore",
    ],
  ],
  Array [
    "[error]",
    "Error parsing line:",
    "Bad Gateway",
  ],
  Array [
    "Error deploying project:",
    "Bad Gateway",
  ],
  Array [
    "Build log:
",
  ],
  Array [
    "No log available",
  ],
  Array [
    "",
  ],
]
`;

exports[`Should execute update 1`] = `
Array [
  Array [
    "Updating current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should ignore specified files 1`] = `
Array [
  Array [
    "Deploying test/fixtures/test_ignore_project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;

exports[`Should not deploy with broken config 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Please, check your config and try again:",
    "SyntaxError: Unexpected token I in JSON at position 0",
  ],
]
`;

exports[`Should not deploy with config without project name 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Please, check your config and try again:",
    "Error: Project should have a valid name in config!",
  ],
]
`;

exports[`Should not deploy with non-existent path 1`] = `
Array [
  Array [
    "Deploying i-do-not-exist to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Please, check your arguments and try again.",
  ],
]
`;

exports[`Should open webpage after deploy 1`] = `
Array [
  Array [
    "Deploying current project to endpoint:",
    "http://localhost:8080",
  ],
  Array [
    "Your project is now deployed as:
",
  ],
  Array [
    "   ID         URL             Hostname       Type        
   test       localhost       test           Container   ",
  ],
]
`;
